<resources>
    <string name="hello">Hello World, MessageActivity!</string>
	<string name="main_empty_list">There is no recent conversation, write new message
		to start one.</string>
    <string name="app_name">Kapow!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="advanced_mode">Advanced Mode</string>
    <string name="advanced_mode_summ">Manually set parameters before running a filter</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Filtering</item>
        <item>Kapow Pages</item>
        <item>Speech Bubbles</item>
        <item>Create your comic!</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
    </array>
    -->

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_kapow_preferences">Settings</string>
    <string name="ms_settings">Mean Shift</string>
    <string name="ms_spatial_res">Spatial Window Radius ( > 0) - Default: 5</string>
    <string name="ms_color_res">Color Window Radius ( > 0) - Default: 10</string>
    <string name="ms_max_level">Max Level (0-8) - Default: 3</string>
    <string name="bilateral_settings">Bilateral Filter</string>
    <string name="bilateral_diameter">Pixel Neighborhood Diameter - Default: 7</string>
    <string name="bilateral_color">Color Filter Sigma - Default 150</string>
    <string name="bilateral_space">Space Filter Sigma - Default 150</string>
    <string name="pref_category_one">Default Values</string>

    <string-array name="filter_array">
        <item>Mean Shift + Toon Filter</item>
        <item>Bilateral Filter</item>
        <item>Grayscal Filtere</item>
        <item>Sketch Filter</item>
        <item>Smooth and Toon Filter</item>
    </string-array>


</resources>